@@ -144,7 +144,7 @@ Common.confirm.clear.graphs=Are you sure you want to clear the graphs?
 # Preferences
 Common.preferences.title=Preferences
 Common.preferences.updates=Updates
-Common.preferences.tracking=Tracking
+Common.preferences.privacy=Privacy
 
 # Updates feature
 Common.updates.error.title=Update Error
@@ -173,15 +173,22 @@ Common.updates.progressDialogTitle=Updating
 Common.updates.progressDialogMessage=Updating \"{0}\" to version {1}
 
 # Tracking feature
-Common.tracking.sendToPhET=Send tracking info to PhET
-Common.tracking.detailsButton=Details...
-Common.tracking.detailsTitle=Tracking Details
-Common.tracking.report=Report
-Common.tracking.oneLiner={0} is made possible by grants that require<br>us to track anonymous usage statistics.
-Common.tracking.about=\
-{0} is made possible by grants that require us to track anonymous usage statistics.<br>\
-No personal or private data is sent; you can see the full report sent to PhET below.<br><br>\
-Please visit the PhET website for more information: {1}
+Common.tracking.description=\
+<html>\
+PhET is made freely available by grants that<br>\
+require us to collect a minimal amount of<br>\
+anonymous information to help document<br>\
+the amount of use of PhET simulations<br>\
+and to better server our users' needs.\
+</html>
+Common.tracking.enabled=Allow sending of information to PhET
+Common.tracking.details.button=Details...
+Common.tracking.details.title=Details
+Common.tracking.details.description=\
+<html>\
+The information shown below will be<br>\
+sent to PhET when the simulation starts.\
+</html>
 
 # Error dialog
 Common.ErrorDialog.detailsButton=Details...
