@@ -5,30 +5,24 @@ import java.awt.event.ActionEvent;
 import java.awt.event.ActionListener;
 import java.awt.event.MouseEvent;
 import java.awt.image.BufferedImage;
-import java.text.MessageFormat;
 
 import javax.swing.*;
 import javax.swing.event.MouseInputAdapter;
 
-import edu.colorado.phet.common.phetcommon.PhetCommonConstants;
 import edu.colorado.phet.common.phetcommon.resources.PhetCommonResources;
 import edu.colorado.phet.common.phetcommon.servicemanager.PhetServiceManager;
 import edu.colorado.phet.common.phetcommon.tracking.ITrackingInfo;
 import edu.colorado.phet.common.phetcommon.view.PhetLookAndFeel;
-import edu.colorado.phet.common.phetcommon.view.util.HTMLUtils;
 import edu.colorado.phet.common.phetcommon.view.util.SwingUtils;
-import edu.colorado.phet.common.phetcommon.view.util.HTMLUtils.InteractiveHTMLPane;
 
 /**
  * Dialog that appears when you press the "Details" button in the Tracking preferences panel.
  */
 public class TrackingDetailsDialog extends JDialog {
     
-    private static final String TITLE = PhetCommonResources.getString( "Common.tracking.detailsTitle" );
-    private static final String REPORT_LABEL = PhetCommonResources.getString( "Common.tracking.report" );
-    private static final String WEB_LINK_TOOLTIP = PhetCommonResources.getString( "Common.About.WebLink" );
+    private static final String TITLE = PhetCommonResources.getString( "Common.tracking.details.title" );
+    private static final String DESCRIPTION = PhetCommonResources.getString( "Common.tracking.details.description" );
     private static final String OK_BUTTON = PhetCommonResources.getString( "Common.choice.ok" );
-    private static final String ABOUT_PATTERN = PhetCommonResources.getString( "Common.tracking.about" );
     
     public TrackingDetailsDialog( Dialog owner, ITrackingInfo trackingInfo ) {
         super( owner );
@@ -51,7 +45,6 @@ public class TrackingDetailsDialog extends JDialog {
         constraints.gridwidth = 1;
         JPanel panel = new JPanel( new GridBagLayout() );
         panel.setBorder( BorderFactory.createEmptyBorder( 8, 2, 8, 2 ) );
-        panel.add( createLogo(), constraints );
         panel.add( createDescription(), constraints );
         panel.add( createReport( trackingInfo ), constraints );
         panel.add( createButtonPanel(), constraints );
@@ -61,28 +54,8 @@ public class TrackingDetailsDialog extends JDialog {
         SwingUtils.centerDialogInParent( this );
     }
 
-    private static JComponent createLogo() {
-        BufferedImage image = PhetCommonResources.getInstance().getImage( PhetLookAndFeel.PHET_LOGO_120x50 );
-        JLabel logoLabel = new JLabel( new ImageIcon( image ) );
-        logoLabel.setCursor( Cursor.getPredefinedCursor( Cursor.HAND_CURSOR ) );
-        logoLabel.setToolTipText( WEB_LINK_TOOLTIP );
-        logoLabel.addMouseListener( new MouseInputAdapter() {
-            public void mouseReleased( MouseEvent e ) {
-                PhetServiceManager.showPhetPage();
-            }
-        } );
-        return logoLabel;
-        
-    }
-    
     private static JComponent createDescription() {
-        // fill in the PhET URL in the About HTML fragment, then add CSS and <html> tags
-        Object[] args = { HTMLUtils.getPhetHomeHref( PhetCommonConstants.PHET_NAME ), HTMLUtils.getPhetHomeHref() };
-        String fragment = MessageFormat.format( ABOUT_PATTERN, args );
-        String html = HTMLUtils.createStyledHTMLFromFragment( fragment );
-        InteractiveHTMLPane copyrightLabel = new InteractiveHTMLPane( html );
-        copyrightLabel.setMargin( new Insets( 10, 10, 10, 10 ) );
-        return copyrightLabel;
+        return new JLabel( DESCRIPTION );
     }
     
     //TODO report should be in a JScrollPane to handle future reports that may be longer
@@ -91,7 +64,7 @@ public class TrackingDetailsDialog extends JDialog {
         if ( trackingInfo.getHumanReadableTrackingInformation() != null ) {
             jt.setText( trackingInfo.getHumanReadableTrackingInformation() );
         }
-        jt.setBorder( BorderFactory.createTitledBorder( REPORT_LABEL ) );
+        jt.setBorder( BorderFactory.createLineBorder( Color.BLACK, 1 ) );
         jt.setEditable( false );
         return jt;
     }
